--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
             <div id="loader-wrapper">
                 <div class="loader-content">
                     <!-- Logo au centre -->
-                    <div class="loader-logo">RONIN<span class="dot">.</span></div>
+
+                    <div class="loader-logo">
+                        <!-- Logo Typographique Version Géante -->
+                        <div class="ronin-logo loader-typo-scale">
+                            <span class="glitch-r">R</span>ONIN
+                            <span class="kanji-stamp">浪人</span>
+                        </div>
+                    </div>
 
                     <!-- Cercle RPM (SVG animé) -->
                     <div class="rpm-container">
